# aws

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  app.py  cdk.json  cloudformation-template.yaml  config.json  deploy-cloudformation.sh  deploy.sh  get-urls.sh  package.json  pyproject.toml  requirements-dev.txt  setup-aws-credentials.sh  test_api.sh
.cursor/rules/: no-cursor-coauthor.mdc
.github/workflows/: ci.yml
aws_serverless_api/: aws_serverless_api_stack.py
lambda/: __init__.py  handler.py  processor.py  step_function_trigger.py
lambda/repositories/: items_repository.py  jobs_repository.py
lambda/services/: items_service.py  jobs_service.py
processor/: .dockerignore  Dockerfile  processor.py
scripts/: build-and-push-docker.sh  test_api.sh  test_video_processing.sh
tests/: __init__.py  conftest.py  test_items_service.py  test_jobs_service.py
ui/: index.html  jobs.html
video_processing/: video_processing_stack.py
